# fastAPI_10_lessons

./: db.sqlite3  items_views.py  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: __init__.py  config.py
core/models/: __init__.py  base.py  db_helper.py  product.py
users/: crud.py  schemas.py  views.py
