[tool.poetry]
name = "microshop"
version = "0.1.0"
description = "this shop was wrote on python"
authors = ["theal1ve <dekalive.444@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["all"], version = "^0.30.1"}
pydantic = "^2.7.4"
email-validator = "^2.2.0"
black = "^24.4.2"
sqlalchemy = {extras = ["asycnio"], version = "^2.0.31"}
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
